# picoblue

./: README.md  pyproject.toml
src/: bluebot.py  config.py  logger.py  main.py  wifi.py  zabbix_client.py
